--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="bigdiv">
-    <img class="moti=img" src="./assets/images/assets/images/IMG.JPG" alt="DON'T GIVE UP">
+    <img class="moti=img" src="assets/images/IMG.JPG" alt="DON'T GIVE UP">
   
     <h1>
       BELIEVE IN YOURSELF!!!
